--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ certifi==2018.4.16
 chardet==3.0.4
 get==1.0.3
 idna==2.7
+Jinja2==2.10
+MarkupSafe==1.0
 post==1.0.2
 public==1.0.3
 query-string==1.0.2
